--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
+<h1>Login</h1>
+<form method="post">
+    <table>
+        <tr>
+            <td><label for="username">Username</label></td>
+            <td>
+                <input name="username" type="text" value="{{ username }}">
+            </td>
+        </tr>
+        <tr>
+            <td><label for="password">Password</label></td>
+            <td>
+                <input name="password" type="password">
+            </td>
+        </tr>
 
+    </table>
+    <input type="submit">
+</form>
 
 {% endblock %}
